# rich

./: Cargo.toml  LICENSE  README.md
align/: Cargo.toml
align/src/: lib.rs
cells/: Cargo.toml
cells/src/: cell_widths.rs  lib.rs
color/: Cargo.toml
color/src/: color.rs  lib.rs  terminal_theme.rs  triplet.rs
color/src/palette/: mod.rs  palette.rs  palettes.rs
console/: Cargo.toml
console/src/: lib.rs  options.rs  traits.rs
containers/: Cargo.toml
containers/src/: lib.rs  lines.rs  renderables.rs
control/: Cargo.toml
control/src/: lib.rs
measure/: Cargo.toml
measure/src/: lib.rs
render_box/: Cargo.toml
render_box/src/: lib.rs
segment/: Cargo.toml
segment/src/: lib.rs
style/: Cargo.toml
style/src/: lib.rs  style.rs
text/: Cargo.toml
text/src/: lib.rs
utils/: Cargo.toml
utils/src/: iter.rs  lib.rs  pick.rs  ratio.rs  wrap.rs
