[package]
name = "containers"
version = "0.1.0"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cells = { path = "../cells" }
console = { path = "../console" }
measure = { path = "../measure" }