[package]
name = "style"
version = "0.1.0"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
color = { path = "../color" }
lazy_static = "1.4.0"
thiserror = "1.0.23"
uuid = { version = "0.8.1", features = ["v4"] }